// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article list 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link>
        <View
          style={
            Object {
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            }
          }
        >
          <Card>
            <ArticleSummary />
          </Card>
        </View>
      </Link>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
            }
          }
        />
      </View>
    </View>
    <View>
      <Link>
        <View
          style={
            Object {
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            }
          }
        >
          <Card>
            <ArticleSummary />
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
            }
          }
        />
        <ActivityIndicator
          style={
            Object {
              "paddingVertical": 25,
            }
          }
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`2. article list with no images 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link>
        <View
          style={
            Object {
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            }
          }
        >
          <Card>
            <ArticleSummary />
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
            }
          }
        />
        <ActivityIndicator
          style={
            Object {
              "paddingVertical": 25,
            }
          }
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`3. a retry button when load more fails 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link>
        <View
          style={
            Object {
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            }
          }
        >
          <Card>
            <ArticleSummary />
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "center",
              "padding": 25,
              "width": "100%",
            }
          }
        >
          <Button />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
